--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "refactor-rag-flow",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "ragflow-clone",
   "private": true,
+  "type": "module",
+  "version": "0.1.0",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "scripts": {
     "build": "pnpm -r build",
-    "dev": "pnpm -r dev"
+    "dev:api": "pnpm --filter @ragflow/api dev",
+    "dev:worker-ingest": "pnpm --filter @ragflow/worker-ingest dev",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --check ."
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@types/node": "^24.6.2",
+    "typescript": "^5.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5"
   }
 }
